test/tests/compiler/13_floating-point_numbers/valid/floating_expressions/simple.plx
#  A simple arithmetic test case 
pub fn main(none) i32 {
    x: f64 = 2.0
    return (x * 2.0 == 4.0)
}
